compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__tuple_index_out_of_bounds.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 586
expression: "#(0, 1).2"
snapshot_kind: text
---
----- SOURCE CODE
#(0, 1).2

----- ERROR
error: Out of bounds tuple index
  ┌─ /src/one/two.gleam:1:8
  │
1 │ #(0, 1).2
  │        ^^ This index is too large

The index being accessed for this tuple is 2, but this tuple has 2 elements
so the highest valid index is 1.
